--- a/src/html/partials/head.html
+++ b/src/html/partials/head.html
@@ -5,5 +5,5 @@
   name="description"
   content="EaglesLab 深耕大学生升学与就业10年，2000+学员，85%就业率，95%升学率。提供技能培训、求职辅导、学业辅导，助力大学生成长。"
 />
-<link rel="stylesheet" href="css/styles.css" />
-<link rel="stylesheet" href="css/maintainability.css" />
+<link rel="stylesheet" href="/css/styles.css" />
+<link rel="stylesheet" href="/css/maintainability.css" />
